ch.ath.choisnet.i18n

---------------------------------------------------------------------
03a.20
  Move release note to package.
---------------------------------------------------------------------

---------------------------------------------------------------------
Known problems:
---------------------------------------------------------------------
To add/improve:
---------------------------------------------------------------------
Future extensions:
---------------------------------------------------------------------
mvn eclipse:eclipse