@@ -1,0 +1,3 @@
+@CALL mvn clean package
+@Echo EL=%ERRORLEVEL%
+
