@@ -163,28 +163,6 @@
       <fileset dir="${build.home}/jars"/>
     </jar>
 
-    <!-- DuplicateFiles standalone
-    <jar jarfile="${jar.home}/${app.name}.DuplicateFiles.${app.version}.jar"
-         basedir="${build.home}/fake"
-        >
-      <manifest>
-        <attribute name="Main-Class"          value="cx.ath.choisnet.tools.duplicatefiles.DuplicateFilesFrame"/>
-        <attribute name="SplashScreen-Image"  value="cx/ath/choisnet/tools/duplicatefiles/splash.png"/>
-        <attribute name="X-Built-By"          value="${user.name}"/>
-        <attribute name="X-APP-Name"          value="${app.name}"/>
-        <attribute name="X-APP-Version"       value="${app.version}"/>
-        <attribute name="X-APP-Created-By"    value="${app.vendor}"/>
-        <attribute name="X-APP-Decription"    value="Clean up yours hards drives"/>
-
-      </manifest>
-      <fileset dir="${build.home}/classes">
-        <include name="cx/ath/choisnet/tools/duplicatefiles/**"/>
-        <include name="*.*"/>
-      </fileset>
-      <fileset dir="${build.home}/jars"/>
-    </jar>
-    -->
-
   </target>
 
 <!-- ==================== Javadoc Target =============================== -->
