@@ -7,7 +7,7 @@ log4j.rootCategory=debug, STDOUT
 #log4j.rootCategory=info, STDOUT
 
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.File=${user.home}/CCHLibTools-Log4J.log
+log4j.appender.FILE.File=${user.home}/Log4J-cx.ath.choisnet.tools.i18n.log
 #log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
@@ -23,11 +23,6 @@ log4j.appender.STDOUT.layout.ConversionPattern=[%d{HH:mm:ss}] %c : %m%n
 
 # Pattern to specify level for packages.
 # log4j.logger.path.to.package=debug
-#
-#log4j.logger.jMiiEditor.introspection=error
-#log4j.logger.jMiiEditor.gui=error
-#log4j.logger.jMiiEditor.mii=warning
-log4j.logger.jMiiEditor.mii=error
 log4j.logger.utils.introspection=error
 log4j.logger.utils=error
 
