@@ -137,7 +137,7 @@
       </fileset>
     </delete>
 
-    <!-- CompareRessourceBundle standalone -->
+    <!-- CompareRessourceBundle standalone
     <jar jarfile="${jar.home}/${app.name}.CompareRessourceBundle.${app.version}.jar"
          basedir="${build.home}/fake"
         >
@@ -156,7 +156,7 @@
       </fileset>
       <fileset dir="${build.home}/jars"/>
     </jar>
-
+    -->
     <!-- DuplicateFiles standalone
     <jar jarfile="${jar.home}/${app.name}.DuplicateFiles.${app.version}.jar"
          basedir="${build.home}/fake"
