@@ -1,6 +1,9 @@
 ch.ath.choisnet.duplicatefiles
 
 ---------------------------------------------------------------------
+03a.80
+  Migrate to maven
+---------------------------------------------------------------------
 03a.21
   Add possibility to scan only some files
 ---------------------------------------------------------------------
