@@ -1,6 +1,9 @@
 ch.ath.choisnet.i18n
 
 ---------------------------------------------------------------------
+03a.80
+  Migrate to maven
+---------------------------------------------------------------------
 03a.20
   Move release note to package.
 ---------------------------------------------------------------------
@@ -12,4 +15,3 @@ To add/improve:
 ---------------------------------------------------------------------
 Future extensions:
 ---------------------------------------------------------------------
-mvn eclipse:eclipse
